--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
